login and logout properly working

--- a/Lab5/views/home.html
+++ b/Lab5/views/home.html
@@ -67,6 +67,7 @@
               <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
               <li class="scroll-to-section"><a href="#services">Services</a></li>
               <li class="scroll-to-section"><a href="#about">About</a></li>
+              <a href="/users/logout/">Logout</a>
               <li>
                 <div class="gradient-button"><a id="modal_trigger" href="#modal"><i class="fa fa-sign-in-alt"></i> Sign
                     In Now</a></div>
@@ -226,8 +227,6 @@
       </div>
     </div>
   </footer>
-
-
   <!-- Scripts -->
   <script src="/jquery/jquery.min.js"></script>
   <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
