--- a/Lab5/views/home.html
+++ b/Lab5/views/home.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
@@ -11,18 +10,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet">
-
-  <title>Chain App Dev - App Landing Page HTML5 Template</title>
+  <title>Lab 5</title>
 
   <!-- Bootstrap core CSS -->
   <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <!--
-    TemplateMo 570 Chain App Dev
-
-    https://templatemo.com/tm-570-chain-app-dev
-
-    -->
-  <!-- Additional CSS Files -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/templatemo-chain-app-dev.css">
@@ -32,12 +23,9 @@
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-
-
 </head>
 
 <body>
-
   <!-- ***** Preloader Start ***** -->
   <div id="js-preloader" class="js-preloader">
     <div class="preloader-inner">
@@ -67,101 +55,16 @@
               <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
               <li class="scroll-to-section"><a href="#services">Services</a></li>
               <li class="scroll-to-section"><a href="#about">About</a></li>
-              <a href="/users/logout/">Logout</a>
               <li>
-                <div class="gradient-button"><a id="modal_trigger" href="#modal"><i class="fa fa-sign-in-alt"></i> Sign
-                    In Now</a></div>
+                <div class="gradient-button"><a id="modal_trigger" href="/users/logout/"><i
+                      class="fa fa-sign-in-alt"></i> Logout </a></div>
               </li>
             </ul>
-            <a class='menu-trigger'>
-              <span>Menu</span>
-            </a>
-            <!-- ***** Menu End ***** -->
           </nav>
         </div>
       </div>
     </div>
   </header>
-  <!-- ***** Header Area End ***** -->
-
-  <div id="modal" class="popupContainer" style="display:none;">
-    <div class="popupHeader">
-      <span class="header_title">Login</span>
-      <span class="modal_close"><i class="fa fa-times"></i></span>
-    </div>
-
-    <section class="popupBody">
-      <!-- Social Login -->
-      <div class="social_login">
-        <div class="">
-        </div>
-
-        <div class="centeredText">
-          <span>Select Login or Sign Up</span>
-        </div>
-
-        <div class="action_btns">
-          <div class="one_half"><a href="#" id="login_form" class="btn">Login</a></div>
-          <div class="one_half last"><a href="#" id="register_form" class="btn">Sign up</a></div>
-        </div>
-      </div>
-      
-      <!-- Username & Password Login form -->
-      <div class="user_login">
-        <form>
-          <label>Email / Username</label>
-          <input id="emailLogin" type="text" />
-          <br />
-
-          <label>Password</label>
-          <input id="passwordLogin" type="password" />
-          <br />
-
-          <div class="checkbox">
-            <input id="remember" type="checkbox" />
-            <label for="remember">Remember me on this computer</label>
-          </div>
-
-          <div class="action_btns">
-            <div class="one_half"><a href="#" class="btn back_btn"><i class="fa fa-angle-double-left"></i> Back</a>
-            </div>
-            <div class="one_half last"><button class="login">Login</a></div>
-          </div>
-        </form>
-
-        <a href="#" class="forgot_password">Forgot password?</a>
-      </div>
-
-      <!-- Register Form -->
-      <div class="user_register">
-        <form>
-          <label>Name</label>
-          <input id="nameRegister" type="text" />
-          <br />
-
-          <label>Email Address</label>
-          <input id="emailRegister" type="email" />
-          <br />
-
-          <label>Password</label>
-          <input id="passwordRegister" type="password" />
-          <br />
-
-          <div class="checkbox">
-            <input id="send_updates" type="checkbox" />
-            <label for="send_updates">Send me occasional email updates</label>
-          </div>
-
-          <div class="action_btns">
-            <div class="one_half"><a href="#" class="btn back_btn"><i class="fa fa-angle-double-left"></i> Back</a>
-            </div>
-            <div class="one_half last"><button class="register">Register</button></div>
-          </div>
-        </form>
-      </div>
-    </section>
-  </div>
-
   <div class="main-banner wow fadeIn" id="top" data-wow-duration="1s" data-wow-delay="0.5s">
     <div class="container">
       <div class="row">
@@ -169,13 +72,58 @@
           <div class="row">
             <div class="col-lg-6 align-self-center">
               <div class="left-content show-up header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
-                <h1>Chain App Dev</h1>
-                <h1>Hello, <%= name %></h1>
-                <p>We are a team of developers who are passionate about building the best web applications for
-                  your business.</p>
-                <a href="#services" class="btn btn-primary">Learn More</a>
+                <h1>Hello, <%= name %>
+                </h1>
+                <!-- form to allow user to enter their data-->
+                <!-- Date of Birth, City of Birth, Email, Address, 
+                  Gender, Hobbies, Civil state, Profession, Salary per year, 
+                  upload a picture, and favourite sport -->
+                <div class="userData">
+                  <form>
+                    <label>name: </label>
+                    <input type="text" name="name" value="<%= name %>">
+                    <br>
+                    <label>email: </label>
+                    <input type="text" name="email" value="<%= email %>">
+                    <br>
+                    <label>Birthday</label>
+                    <input type="date" name="birthday" value="<%= dob %>">
+                    <br>
+                    <label>City of Birth</label>
+                    <input type="text" name="city" value="<%= city %>">
+                    <br>
+                    <label>Address</label>
+                    <input type="text" name="address" value="<%= address %>">
+                    <br>
+                    <label> Gender </label>
+                    <input type="text" name="gender" value="<%= gender %>">
+                    <br>
+                    <label>Hobbies</label>
+                    <input type="text" name="hobbies" value="<%= hobbies %>">
+                    <br>
+                    <label>Civil state</label>
+                    <input type="text" name="civils" value="<%= civilS %>">
+                    <br>
+                    <label>Profession</label>
+                    <input type="text" name="profession" value="<%= job %>">
+                    <br>
+                    <label>Salary per year</label>
+                    <input type="text" name="salary" value="<%= salary %>">
+                    <br>
+                    <label>Favourite sport</label>
+                    <input type="text" name="sport" value="<%= sport %>">
+                    <br>
+                    <label>Upload a picture</label>
+                    <input type="file" name="picture" value="<%= picture %>">
+                    <br>
+                    <a href="#services" class="btn btn-primary">Save Data</a>
+
+                  </form>
+                </div>
+                
               </div>
             </div>
+
             <div class="col-lg-6">
               <div class="right-image wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
                 <img src="/images/slider-dec.png" alt="">
@@ -187,46 +135,6 @@
     </div>
   </div>
 
-  <footer id="newsletter">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 offset-lg-2">
-          <div class="section-heading">
-            <h4>Join our mailing list to receive the news &amp; latest trends</h4>
-          </div>
-        </div>
-        <div class="col-lg-6 offset-lg-3">
-          <form id="search" action="#" method="GET">
-            <div class="row">
-              <div class="col-lg-6 col-sm-6">
-                <fieldset>
-                  <input type="address" name="address" class="email" placeholder="Email Address..." autocomplete="on"
-                    required>
-                </fieldset>
-              </div>
-              <div class="col-lg-6 col-sm-6">
-                <fieldset>
-                  <button type="submit" class="main-button">Subscribe Now <i class="fa fa-angle-right"></i></button>
-                </fieldset>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-      <div>
-        <div class="col-lg-12">
-          <div class="copyright-text">
-            <p>Copyright © 2022 Chain App Dev Company. All Rights Reserved.
-              <br>Design: <a href="https://templatemo.com/" target="_blank" title="css templates">TemplateMo</a><br>
-
-              Distributed By: <a href="https://themewagon.com/" target="_blank"
-                title="Bootstrap Template World">ThemeWagon</a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer>
   <!-- Scripts -->
   <script src="/jquery/jquery.min.js"></script>
   <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
