started work on backend for updating user info

--- a/Lab5/views/home.html
+++ b/Lab5/views/home.html
@@ -102,10 +102,10 @@
                     <input type="text" name="hobbies" value="<%= hobbies %>">
                     <br>
                     <label>Civil state</label>
-                    <input type="text" name="civils" value="<%= civilS %>">
+                    <input type="text" name="civilS" value="<%= civilS %>">
                     <br>
                     <label>Profession</label>
-                    <input type="text" name="profession" value="<%= job %>">
+                    <input type="text" name="job" value="<%= job %>">
                     <br>
                     <label>Salary per year</label>
                     <input type="text" name="salary" value="<%= salary %>">
@@ -116,14 +116,14 @@
                     <label>Upload a picture</label>
                     <input type="file" name="picture" value="<%= picture %>">
                     <br>
-                    <a href="#services" class="btn btn-primary">Save Data</a>
+                    <button class="saveData" class="btn btn-primary">Save Data</button>
 
                   </form>
                 </div>
-                
               </div>
             </div>
-
+            <script>
+            </script>
             <div class="col-lg-6">
               <div class="right-image wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
                 <img src="/images/slider-dec.png" alt="">
